# herpes

./: .gitignore  default.nix  shell.nix
herpes/: default.nix  wla.cabal
herpes/src/Herpes/: Form.hs  Identifier.hs  Motd.hs  Report.hs  Screen.hs  UseCase.hs  Workspace.hs
herpes/src/Herpes/Erpl/: Syntax.hs  Translate.hs
herpes/src/Herpes/Form/: Generic.hs  Gtk.hs
herpes/src/Herpes/Report/: Gtk.hs
herpes/src/Herpes/Screen/: Gtk.hs
herpes/src/Herpes/Workspace/: Gtk.hs
