cabal-version: >= 1.10
build-type: Simple

name: herpes
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Herpes.Form,
        Herpes.Form.Generic,
        Herpes.Form.Gtk,
        Herpes.Motd,
        Herpes.Report,
        Herpes.Report.Gtk,
        Herpes.Screen,
        Herpes.Screen.Gtk

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        ConstraintKinds,
        DataKinds,
        DeriveAnyClass,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DeriveTraversable,
        DerivingStrategies,
        EmptyCase,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        KindSignatures,
        MonadComprehensions,
        MultiParamTypeClasses,
        OverloadedStrings,
        ParallelListComp,
        ScopedTypeVariables,
        StrictData,
        TypeApplications,
        ViewPatterns

    build-depends:
        base,
        free,
        generics-sop,
        gtk,
        hashable,
        kan-extensions,
        lens,
        mtl,
        text,
        thyme,
        unordered-containers
