cabal-version: >= 1.10
build-type: Simple

name: herpes
version: 0.0.0.0

library
    hs-source-dirs:
        src

    exposed-modules:
        Herpes.Erpl.Syntax,
        Herpes.Erpl.Translate,
        Herpes.Form,
        Herpes.Form.Generic,
        Herpes.Form.Gtk,
        Herpes.Identifier,
        Herpes.Motd,
        Herpes.Report,
        Herpes.Report.Gtk,
        Herpes.Screen,
        Herpes.Screen.Gtk,
        Herpes.UseCase,
        Herpes.Workspace,
        Herpes.Workspace.Gtk

    default-language:
        Haskell2010

    ghc-options:
        -Wall
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns

    default-extensions:
        ApplicativeDo,
        ConstraintKinds,
        DataKinds,
        DeriveAnyClass,
        DeriveFoldable,
        DeriveFunctor,
        DeriveGeneric,
        DeriveTraversable,
        DerivingStrategies,
        EmptyCase,
        FlexibleContexts,
        FlexibleInstances,
        FunctionalDependencies,
        GADTs,
        GeneralizedNewtypeDeriving,
        KindSignatures,
        MonadComprehensions,
        MultiParamTypeClasses,
        OverloadedStrings,
        ParallelListComp,
        PatternSynonyms,
        ScopedTypeVariables,
        StrictData,
        TypeApplications,
        ViewPatterns

    build-depends:
        base,
        free,
        generics-sop,
        gtk,
        hashable,
        haskell-src-exts,
        kan-extensions,
        lens,
        mtl,
        text,
        thyme,
        unordered-containers
